Mensaje descriptivo de la confirmación

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -80,73 +80,17 @@
 	<main>
 		<div class="amezquita">
 			<div class="contenedor">
-				<h3 class="titulo">Conocenos:)</h3>
+				<h3 class="titulo">Conocenos:</h3>
 				<p class="descripcion">
-					¿Que DisppBetter? Somos estudiantes de 5to cuatrimestre,los cuales estamos desarrollando un proyecto el cual está pensado en resolver algunos problemas cotidianos de personas con algunas discapacidades o enfermedades en las cuales llevan una medicación, los cuales tienen diferentes problemas a la hora de llegar a tomarse sus medicamentos como por ejemplo que dice si le llega a pasar la hora que nos recuerden a qué hora tomarlos no saber qué pastilla les toca, ya que muchas personas que les suele ocurrir estos problemas son la de tercera edad o niños pequeños a los cuales se les dificulta poder tener acceso a los medicamentos que deben tomar, estos pueden ser incluso diariamente, por lo cual se nos vino a la mente crear un dispensador en el cual podremos desde una aplicación poder controlar la hora la cantidad y la pastilla que se deberá tomar el usuario a su hora indicándose con alguna alerta y este podrá ser ayudado y controlado al mismo tiempo por algún familiar que se haga responsable del mismo.
+					¿Que DisppBetter? Somos estudiantes de 7to cuatrimestre,los cuales estamos desarrollando un proyecto el cual está pensado en resolver algunos problemas cotidianos de personas con algunas discapacidades o enfermedades en las cuales llevan una medicación, los cuales tienen diferentes problemas a la hora de llegar a tomarse sus medicamentos como por ejemplo que dice si le llega a pasar la hora que nos recuerden a qué hora tomarlos no saber qué pastilla les toca, ya que muchas personas que les suele ocurrir estos problemas son la de tercera edad o niños pequeños a los cuales se les dificulta poder tener acceso a los medicamentos que deben tomar, estos pueden ser incluso diariamente, por lo cual se nos vino a la mente crear un dispensador en el cual podremos desde una aplicación poder controlar la hora la cantidad y la pastilla que se deberá tomar el usuario a su hora indicándose con alguna alerta y este podrá ser ayudado y controlado al mismo tiempo por algún familiar que se haga responsable del mismo.
 
 				</p>
 			</div>
 		</div>
 		<section class="miembros">
-            <div class="contenedor">
-                <h2 class="sobre-nosotros">Objetivo General</h2>
-                <p> El objetivo de este proyecto será ayudar  a los seres queridos a mantener una mejor salud, principalmente los de la edad adulta, que desgraciadamente algunos de ellos ya no tiene la misma fuerza y salud que cuando eran jóvenes, o es una persona con pérdida de la memoria, una persona ciega o simplemente muy despistado para su salud, por eso mismo el proyecto del dispensador de pastillas inteligente donde algún familiar o ser querido, mediante la app se podrá conectar con el dispensador y establecer horarios, para el tipo de pastilla necesaria, ya que contará con alguna alarma, y así que la persona con alguna discapacidad siempre se pueda tomar todo su medicamento adecuado  y en tiempo, todo esto mediante la app y nuestro dispensador ya que será vinculado por alguna red o bluetooth que contará con  placa Arduino, Un módulo bluetooth HC-06 y un nodeMCU, también contará con motores que harán la función de dispensar las pastillas adecuadas según el horario y tipo establecido.</p>
-                <br><br>
-                <div class="cardsi">
-                    <div class="cardi">
-                        <img src="/img/cho.jpeg" alt="">
-
-                    </div>
-
-	
-        
-        <section class="miembros">
-            <div class="contenedor">
-                <h2 class="sobre-nosotros">Dispbetter-Family</h2>
-                <h3 class="slogan">Quienes nos conforman?</h3>
-                <div class="cards">
-                    <div class="card">
-                        <img src="/img/majo.jpg" alt="">
-                        <h4>Majo Axtell</h4>
-                        <p>Product Owner</p>
-                    </div>
-                    <div class="card">
-                        <img src="/img/diego.jpg" alt="">
-                        <h4>Diego Ordoñez</h4>
-                        <p>Developer</p>
-                    </div>
-                    <div class="card">
-                        <img src="/img/irvan.jpg" alt="">
-                        <h4>Irvan Bolaños</h4>
-                        <p>Programmer</p>
-                    </div>
-					<div class="card">
-                        <img src="/img/diosdelsexo.jpg" alt="">
-                        <h4>Luis Cruz</h4>
-                        <p>Programmer</p>
-                    </div>
-                </div>
+           
             </div>
-        </section>
-        <section class="miembros">
-            <div class="contenedor">
-                <h3 class="sobre-nosotros">Alcance</h3>
-                <p>Este Proyecto está más enfocado para un público adulto, sobre todo para las personas de la tercera edad, ya que la proporción de personas mayores está aumentando rápidamente en todo el mundo. Según se calcula, entre 2015 y 2050 dicha proporción casi se duplicará, pasando de 12 a 22%.
-                    Teniendo estos cálculos que son una cuarta parte del mundo y que como sabemos, muchas de estas personas que llegan a la tercera edad, no siempre  es posible llegar con salud plena y muchos de ellos depende de alguna otra persona, ya que a estas edades es común que empiecen a padecer enfermedades, y una de estas es de las más comunes que es él Alzheimer, y otras que surgen gracias a esta, por el olvido del cuidado, por eso mismo presentamos el dispensador inteligente de pastillas.
-                    </p>
-                    <br>
-                    <br>
-                <div class="clientes">
-                    <div class="cliente">
-                        <img src="/img/one.jpg" alt="">
-                    </div>
-                    <div class="cliente">
-                        <img src="/img/two.jpg" alt="">
-                    </div>
-                    <div class="cliente">
-                        <img src="/img/tre.jpg" alt="">
-                    </div>
-            </div>
+          </div>
         </section>
     </main>
     <footer>
